[package]
name = "to-inject"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "to_inject"

[dependencies]
windows = { version = "0.51.1", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Environment",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
] }
once_cell = "1.18.0"
